[tool.poetry]
name = "track-to-image"
version = "0.1.0"
description = ""
authors = ["Jacob Tegtmeier"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gpxpy = "^1.6.2"
piexif = "^1.1.3"
pillow = "^10.1.0"
rawpy = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
